--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"test-data.csv\")"
+    "df = pd.read_csv(\"test-data.csv\")\n",
+    "\n",
+    "# unfortunately this dataset is not very useful, we cannot really predict the outcome basing on the data as it does not have any strict values like price"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +169,7 @@
        "4  82.85 bhp      5  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,12 +188,14 @@
     "df['Mileage'] = df['Mileage'].str.replace('kmpl', '')\n",
     "df['Mileage'] = df['Mileage'].str.replace('km/kg', '')\n",
     "df['Engine'] = df['Engine'].str.replace('CC', '')\n",
-    "df = df.drop('Name', axis=1)"
+    "df = df.drop('Name', axis=1)\n",
+    "\n",
+    "# removing useless elements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +317,7 @@
        "5   16.0   2179     140       7  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,12 +325,14 @@
    "source": [
     "df = df[df['Power'].str.strip().str.lower() != 'null']\n",
     "df = df[df['Engine'].str.strip().str.lower() != 'null']\n",
-    "df.head()"
+    "df.head()\n",
+    "\n",
+    "# removing null values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -398,12 +404,14 @@
     "    \n",
     "    if not wrong_values.empty:\n",
     "        print(f\"Column '{col}' has wrong numerical data:\")\n",
-    "        print(wrong_values)"
+    "        print(wrong_values)\n",
+    "\n",
+    "# just checking for myself)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +908,7 @@
        "30    15.11    1598  103.60      5  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,12 +917,14 @@
     "df['Power'] = pd.to_numeric(df['Power'])\n",
     "df['Mileage'] = pd.to_numeric(df['Mileage'])\n",
     "df['Engine'] = pd.to_numeric(df['Engine'])\n",
-    "df.head(30)"
+    "df.head(30)\n",
+    "\n",
+    "# converting to numeric"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1055,7 @@
        "max      10.000000  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1207,7 @@
        "10              78000             1    12.80    1968  167.60      5"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,12 +1218,14 @@
     "df = df.drop('Fuel_Type', axis=1)\n",
     "df = df.drop('Location', axis=1)\n",
     "df = df.drop('Year', axis=1)\n",
-    "df.head(10)"
+    "df.head(10)\n",
+    "\n",
+    "# dropping useless columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1236,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1356,7 @@
        "5              85609             0    16.00    2179  140.00      7"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1355,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1498,7 @@
        "max      10.000000  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1497,19 +1509,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = df[['Kilometers_Driven', 'Mileage', 'Engine', 'Power', 'Seats']]\n",
     "\n",
     "# have only the target variable here (dependent variable)\n",
-    "y = df['Transmission']"
+    "y = df['Transmission']\n",
+    "\n",
+    "# splitting the data into training and testing sets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1518,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1530,19 +1544,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-4 {color: black;}#sk-container-id-4 pre{padding: 0;}#sk-container-id-4 div.sk-toggleable {background-color: white;}#sk-container-id-4 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-4 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-4 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-4 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-4 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-4 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-4 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-4 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-4 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-4 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-4 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-4 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-4 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-4 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-4 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-4 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-4 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-4 div.sk-item {position: relative;z-index: 1;}#sk-container-id-4 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-4 div.sk-item::before, #sk-container-id-4 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-4 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-4 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-4 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-4 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-4 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-4 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-4 div.sk-label-container {text-align: center;}#sk-container-id-4 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-4 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-4\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" checked><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression()</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-2 {color: black;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression()</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "LogisticRegression()"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1554,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1563,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1589,12 +1603,14 @@
     "\n",
     "# get overall accuracy of the model and print it\n",
     "acc = accuracy_score(y_test, predictions)\n",
-    "print(\"\\nModel overall accuracy: {:.2f}%\".format(acc * 100))"
+    "print(\"\\nModel overall accuracy: {:.2f}%\".format(acc * 100))\n",
+    "\n",
+    "# the model is quite accurate, 86%"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1637,7 @@
        "0.49870560762476357"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1632,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1675,12 +1691,14 @@
     "transmission_prediction = logmodel.predict(tester_row)\n",
     "result = labels[transmission_prediction[0]]\n",
     "print(result)\n",
-    "print(\"-------------------\")"
+    "print(\"-------------------\")\n",
+    "\n",
+    "# the model predicts that the car is automatic, not so obvious, but considering engine and power values, it is quite possible"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1699,7 +1717,9 @@
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', linewidths=0.5)\n",
     "plt.title('Correlation Matrix')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# the correlation matrix shows that the most important factors are engine and power, which is obvious actually"
    ]
   }
  ],
